get pay-off date

--- a/src/layout.pug
+++ b/src/layout.pug
@@ -11,13 +11,13 @@ html(lang='en')
       .row
         .col-xs-12.col-md-4
           label Loan amount
-          input#loan-amount(type='text')
+          input#loan-amount(type='text', value='4000000')
         .col-xs-12.col-md-4
           label Percent per year
-          input(type='text')
+          input(type='text', value='12')
         .col-xs-12.col-md-4
           label Loan term
-          input#loan-term(type='text')
+          input#loan-term(type='text', value='10')
           select
             option Years
             option Months
