--- a/src/layout.pug
+++ b/src/layout.pug
@@ -43,7 +43,9 @@ html(lang='en')
           input#start-year(type='text')
       h2 Mortgage Repayment Summary
       .cell Loan pay-off date
-      #pay-off-date 343434
+      #pay-off-date
+      .cell Monthly payment
+      #monthly-payment 343434
       h2 Monthly Amortization Schedule
       .table
         .table__cell(style='width: 20%') №
