Add materialize css

--- a/src/index-dev.pug
+++ b/src/index-dev.pug
@@ -1,6 +1,7 @@
 extends layout.pug
 
 block stylesheets
+  link(rel='stylesheet' href='materialize.min.css')
   link(rel='stylesheet' href='main.css')
 
 block scripts
